--- a/public/css/themes/lunanuli.css
+++ b/public/css/themes/lunanuli.css
@@ -18,15 +18,15 @@ html{
     
  
   --accent-color-light: #32b0b9;
-  --accent-color: #279397;
-  --accent-color-mid: #068495;
-  --accent-color-dark: #065066;
+  --accent-color: #278f97;
+  --accent-color-mid: #067895;
+  --accent-color-dark: #08637a;
   
   --secondary-color:  #e1a54a;
   --secondary-color-alt:  #b559d1;
     /*
   --mid-main: var(--light2);
-  */ --bg-main: #1b1215; --bg-darker: #151010; --bg-darkest: #100505; --bg-opaque: #10050530; /*
+  */ --bg-main: #1f171a; --bg-darker: #1d1818; --bg-darkest: #140909; --bg-opaque: #10050530; /*
   --bg-inverse: var(--dark);
   
   --links: #87f;
@@ -40,10 +40,10 @@ html{
   --muted: #99AA;
   
   --light-border: var(--dark);
-  --dark-border: var(--lighter);
   
-    */ --code-main-color: #FA5 !important; --code-main-border:  1px solid #A023 !important; 
+  */ --code-main-color: #FA5 !important; --code-main-border:  1px solid #A023 !important; 
   --code-main-bg: #151528 !important;
+  --dark-border: rgba(180, 133, 86, 0.3);
   
   
   --plx-green: #395;
